<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_CondensingBoilerDefaultParameters" Id="{870f761e-3219-4f48-ac7f-9a82183ed408}">
    <Declaration><![CDATA[TYPE ST_CondensingBoilerDefaultParameters :
STRUCT
	aSetPointLimitsTemperature : ARRAY[1..2] OF REAL := [40,80];
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>